--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -1,50 +1,61 @@
 = simple_form_for [:admin, @sponsor], :html => {:multipart => true, novalidate: true } do |f|
   .row
     .large-6.columns
-      = f.input :name
+      .row
+        .large-12.columns
+          = f.input :name
+      .row
+        .large-12.columns
+          = f.input :website, as: :url
+      .row
+        .large-12.columns
+          = f.input :avatar, as: :file, required: !@sponsor.avatar?
+          = f.hidden_field :image_cache
+
+      .row
+        .large-12.columns
+          .panel.callout
+            %strong Contact Details
+            %p Complete the fields below and/or select a member(s)
+            = f.collection_select :member_ids, Member.all, :id, :full_name,
+              { selected: @sponsor.members.map(&:id) }, { multiple: true }
+            = f.input :email
+            = f.input :contact_first_name, label: 'Contact First Name'
+            = f.input :contact_surname, label: 'Contact Surname'
+
     .large-6.columns
-      = f.input :website, as: :url
+      .row
+        - if current_user.has_role?(:admin)
+          .large-12.columns
+            = f.input :level, collection: Sponsor.levels.keys, label_method: :humanize
+
+    .large-6.columns
+      .panel.callout
+        %p Only required for hosts
+        .row
+          .large-6.columns
+            = f.input :seats
+          .large-6.columns
+            = f.input :number_of_coaches
+
+
+        .row
+          .large-12.columns
+            = f.input :accessibility_info
+        .row
+          .large-12.columns
+            %strong Address
+            = f.simple_fields_for :address do |address|
+              = address.input :flat, label: 'Line 1'
+              = address.input :street, label: 'Line 2'
+              = address.input :postal_code
+              = address.input :city
+              = address.input :latitude
+              = address.input :longitude
+              = address.input :directions
 
   .row
-    .large-6.columns
-      = f.input :avatar, as: :file, required: !@sponsor.avatar?
-      = f.hidden_field :image_cache
-    .large-3.columns
-      = f.input :seats, label: 'Student Spots'
-    .large-3.columns
-      = f.input :number_of_coaches, label: 'Coaches Spots'
-
-  .row
-    .large-6.columns
-      = f.input :level, collection: Sponsor.levels.keys, label_method: :humanize, disabled: !current_user.has_role?(:admin)
-    .large-6.columns
-      = f.input :accessibility_info, label: 'Accessibility information'
-
-  .row
-    .large-6.columns
-      .panel
-        %strong Address
-        = f.simple_fields_for :address do |a|
-          = a.input :flat, label: 'Line 1'
-          = a.input :street, label: 'Line 2'
-          = a.input :postal_code
-          = a.input :city
-          = a.input :latitude
-          = a.input :longitude
-          = a.input :directions
-
-    .large-6.columns
-      .panel
-        %strong Contact Details
-        %p Complete the fields below and/or select a member(s)
-        = f.collection_select :contact_ids, Member.all, :id, :full_name,
-          { selected: @sponsor.contacts.map(&:id) }, { multiple: true }
-        = f.input :email
-        = f.input :contact_first_name, label: 'Contact First Name'
-        = f.input :contact_surname, label: 'Contact Surname'
-
-  .row
-    .large-6.columns
+    .large-12.columns.text-right
       - if params[:action] == 'new' || params[:action] == 'create'
         = f.submit 'Create sponsor', class: 'button round'
       - elsif params[:action] == 'edit'
