make venue option for events not required

--- a/app/views/admin/events/_form.html.haml
+++ b/app/views/admin/events/_form.html.haml
@@ -29,7 +29,7 @@
       = f.input :schedule
   .row
     .large-3.columns
-      = f.association :venue, input_html: { data: { placeholder: 'Select sponsors' }}, required: true
+      = f.association :venue, input_html: { data: { placeholder: 'Select host' }}
   .row
     .large-6.columns
       %br
