--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -16,8 +16,9 @@
       = render partial: 'event_actions'
 
 .stripe.reverse
-  .row
-    = render partial: 'shared/venue', locals: { venue: @event.venue, address: @host_address}
+  - if event.venue.present?
+    .row
+      = render partial: 'shared/venue', locals: { venue: @event.venue, address: @host_address}
 
   .row
     .small-12.column
