--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -53,18 +53,18 @@
       %p.text-center
         %i= t('events.thx_to_sponsors')
       %br
-      - if @event.has_sponsors?
+      - if @event.sponsors?
         %ul.no-bullet
-          - if @event.has_sponsors?(:gold)
+          - if @event.sponsors?(:gold)
             %h3.text-center Gold 
             = render partial: "sponsors", object: @event.gold_sponsors
-          - if @event.has_sponsors?(:silver)
+          - if @event.sponsors?(:silver)
             %h3.text-center Silver
             = render partial: "sponsors", object: @event.silver_sponsors
-          - if @event.has_sponsors?(:bronze)
+          - if @event.sponsors?(:bronze)
             %h3.text-center Bronze
             = render partial: "sponsors", object: @event.bronze_sponsors
-          - if @event.has_sponsors?(:standard)
+          - if @event.sponsors?(:standard)
             %h3.text-center Standard
             = render partial: "sponsors", object: @event.sponsors
 - if @event.verified_coaches.any?
